--- a/Vue.Net/VOL.WebApi/VOL.WebApi.csproj
+++ b/Vue.Net/VOL.WebApi/VOL.WebApi.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj" />
     <ProjectReference Include="..\VOL.AppManager\VOL.AppManager.csproj" />
     <ProjectReference Include="..\VOL.Builder\VOL.Builder.csproj" />
     <ProjectReference Include="..\VOL.Core\VOL.Core.csproj" />
