--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,6 @@
 /开发版dev/Vue.NetCore/Vue.Net/VOL.Entity/obj
 /开发版dev/Vue.NetCore/Vue.Net/VOL.System/obj
 /开发版dev/Vue.NetCore/Vue.Net/VOL.WebApi/obj
-/开发版dev/Vue.NetCore/Vue.Net/VOL.Core/bin
+obj
+/Vue.Net/Business/bin
+/Vue.Net/Business/obj
