--- a/Vue.Net/VOL.WebApi/appsettings.json
+++ b/Vue.Net/VOL.WebApi/appsettings.json
@@ -16,7 +16,7 @@
   "Connection": {
     "DBType": "MsSql", //MySql/MsSql/PgSql  //数据库类型，如果使用的是sqlserver此处应设置为MsSql
     //sqlserver连接字符串
-    "DbConnectionString": "Data Source=JSERWJRGSBCXBO7\\ADMIN;Initial Catalog=netcoredev;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=500;",
+    "DbConnectionString": "Data Source=localhost;Initial Catalog=netcoredev1;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=500;",
 
     //mysql连接字符串(升级EFCore3.1到时已将mysql连接字符串修改,2019-12-20)
     // "DbConnectionString": " Data Source=127.0.0.1;Database=netcoredev;User ID=root;Password=123456;allowPublicKeyRetrieval=true;pooling=true;CharSet=utf8;port=3306;sslmode=none;",
