[update] 关于ubantu20.0 环境下，验证码字体失效的改进

--- a/Vue.Net/VOL.Core/VOL.Core.csproj
+++ b/Vue.Net/VOL.Core/VOL.Core.csproj
@@ -10,7 +10,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
