--- a/Vue.Net/VOL.WebApi/appsettings.json
+++ b/Vue.Net/VOL.WebApi/appsettings.json
@@ -16,10 +16,10 @@
   "Connection": {
     "DBType": "MsSql", //MySql/MsSql/PgSql  //数据库类型，如果使用的是sqlserver此处应设置为MsSql
     //sqlserver连接字符串
-    "DbConnectionString": "Data Source=JXX2835\\SQLEXPRESS;Initial Catalog=netcoredev;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=500;",
+    //"DbConnectionString": "Data Source=120.48.61.75;Initial Catalog=salarydb;Persist Security Info=True;User ID=sa;Password=1234hh56;Connect Timeout=500;",
 
     //mysql连接字符串(升级EFCore3.1到时已将mysql连接字符串修改,2019-12-20)
-    //"DbConnectionString": " Data Source=127.0.0.1;Database=netcoredev1;AllowLoadLocalInfile=true;User ID=root;Password=jxx!@#123..errrewJXXX;allowPublicKeyRetrieval=true;pooling=true;CharSet=utf8;port=3306;sslmode=none;",
+    "DbConnectionString": " Data Source=120.48.61.75;Database=salarydb;AllowLoadLocalInfile=true;User ID=root;Password=123hh456;allowPublicKeyRetrieval=true;pooling=true;CharSet=utf8;port=3306;sslmode=none;",
 
     //PgSql连接字符串
     //  "DbConnectionString": "Host=132.232.2.109;Port=5432;User id=postgres;password=jxx_abcd;Database=netcoredev;",
