初始化提交

--- a/.Net6版本/VOL.WebApi/VOL.WebApi.csproj
+++ b/.Net6版本/VOL.WebApi/VOL.WebApi.csproj
@@ -32,6 +32,7 @@
     <ProjectReference Include="..\VOL.Builder\VOL.Builder.csproj" />
     <ProjectReference Include="..\VOL.Core\VOL.Core.csproj" />
     <ProjectReference Include="..\VOL.Entity\VOL.Entity.csproj" />
+    <ProjectReference Include="..\VOL.Mall\VOL.Mall.csproj" />
     <ProjectReference Include="..\VOL.Order\VOL.Order.csproj" />
     <ProjectReference Include="..\VOL.System\VOL.System.csproj" />
   </ItemGroup>
