--- a/.Net6版本/VOL.WebApi/appsettings.json
+++ b/.Net6版本/VOL.WebApi/appsettings.json
@@ -14,12 +14,8 @@
   "AppUrls": {
   },
   "Connection": {
-    "DBType": "MsSql", //MySql/MsSql/PgSql  //数据库类型，如果使用的是sqlserver此处应设置为MsSql
-    //sqlserver连接字符串
-    "DbConnectionString": "Data Source=JXX2835\\SQLEXPRESS;Initial Catalog=netcoredev;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=500;",
-
-    //mysql连接字符串(升级EFCore3.1到时已将mysql连接字符串修改,2019-12-20)
-    // "DbConnectionString": " Data Source=127.0.0.1;Database=netcoredev;AllowLoadLocalInfile=true;User ID=root;Password=123456;allowPublicKeyRetrieval=true;pooling=true;CharSet=utf8;port=3306;sslmode=none;",
+    "DBType": "MySql", //MySql/MsSql/PgSql  //数据库类型，如果使用的是sqlserver此处应设置为MsSql
+    "DbConnectionString": " Data Source=127.0.0.1;Database=bcm_mall;AllowLoadLocalInfile=true;User ID=root;Password=123456;allowPublicKeyRetrieval=true;pooling=true;CharSet=utf8;port=3306;sslmode=none;",
 
     //PgSql连接字符串
     //  "DbConnectionString": "Host=132.232.2.109;Port=5432;User id=postgres;password=jxx_abcd;Database=netcoredev;",
@@ -88,5 +84,11 @@
     "Port": 25,
     "EnableSsl": false,
     "AuthPwd": "授权密码" //授权密码（对应邮箱设置里面去开启）
+  },
+  "SMS": {
+    "Account": "YZM122652_YZM3366305",
+    "Password": "e9FNaCTofV34c6",
+    "Url": "https://smssh1.253.com/msg/v1/send/json",
+    "LoginTemplate": "您的验证码是{0}（5分钟内有效），您正在登录，切勿泄露，非本人操作请忽略。"
   }
 }
