添加雪花ID支持

--- a/.Net6版本/VOL.WebApi/appsettings.json
+++ b/.Net6版本/VOL.WebApi/appsettings.json
@@ -89,5 +89,15 @@
     "EnableSsl": false,
     "AuthPwd": "授权密码" //授权密码（对应邮箱设置里面去开启）
   },
-  "QuartzAccessKey": "65EC9387355E4717899C552963CE59FF" //定时任务的值,请自行修改
+  "QuartzAccessKey": "65EC9387355E4717899C552963CE59FF", //定时任务的值,请自行修改
+  "EnableSnowFlakeID": true,
+  // 参考 https://github.com/yitter/IdGenerator
+  "SnowFlakeOptions": {
+    "BaseTime": "2023-01-01 00:00:00.000", //基准时间
+    "WorkerId": 1, //机器ID
+    "WorkerIdBitLength": 6, //机器ID位长"
+    "SeqBitLength": 6, //序列号位长
+    "MinSeqNumber": 5, //最小序列号
+    "TopOverCostCount": 2000 //最大漂移次数
+  }
 }
