--- a/开发版dev/Net6开发版/VOL.Core/VOL.Core.csproj
+++ b/开发版dev/Net6开发版/VOL.Core/VOL.Core.csproj
@@ -57,6 +57,7 @@
     <PackageReference Include="Quartz" Version="3.4.0" />
     <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
+    <PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
     <PackageReference Include="ZKWeb.System.Drawing" Version="4.0.1" />
   </ItemGroup>
 
