增加默认忽略配置

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,23 @@
 /Net6.SqlSugar/VOL.System/bin
 /Net6.SqlSugar/VOL.WebApi/obj
 /Net6.SqlSugar/VOL.WebApi/bin
+/vol.api.sqlsugar/VOL.WebApi/obj
+/vol.api.sqlsugar/VOL.WebApi/bin
+/vol.api.sqlsugar/VOL.Sys/obj
+/vol.api.sqlsugar/VOL.Sys/bin
+/vol.api.sqlsugar/VOL.MES/obj
+/vol.api.sqlsugar/VOL.MES/bin
+/vol.api.sqlsugar/VOL.Entity/obj
+/vol.api.sqlsugar/VOL.Entity/bin
+/vol.api.sqlsugar/VOL.Core/obj
+/vol.api.sqlsugar/VOL.Core/bin
+/vol.api.sqlsugar/VOL.Builder/obj
+/vol.api.sqlsugar/VOL.Builder/bin
+/vol.api/VOL.Builder/obj
+/vol.api/VOL.Builder/bin
+/vol.api/VOL.Core/obj
+/vol.api/VOL.Core/bin
+/vol.api/VOL.Entity/obj
+/vol.api/VOL.Entity/bin
+/vol.api/VOL.MES/obj
+/vol.api/VOL.MES/bin
