build(vite): 更新项目依赖并优化配置
- 添加 "type": "module" 到 package.json
- 更新 vite、vue、element-plus 等主要依赖版本
- 移除 vite-plugin-commonjs 依赖
- 更新 ESLint、TypeScript 相关配置

--- a/v3版本代码/Vol.Vue3.Vite/package.json
+++ b/v3版本代码/Vol.Vue3.Vite/package.json
@@ -2,10 +2,11 @@
   "name": "vol-vue3vite",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "vite --host",
     "dev": "vite --host",
-    "buildWithCheck": "run-p type-check build-only",
+    "buildWithCheck": "run-p type-check build",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build": "vite build",
@@ -16,45 +17,51 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@microsoft/signalr": "^7.0.3",
-    "ali-oss": "^6.17.1",
-    "axios": "^1.3.4",
-    "core-js": "^3.29.0",
-    "echarts": "^5.4.1",
-    "element-plus": "^2.2.32",
-    "less": "^4.1.3",
-    "pinia": "^2.0.32",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "vite-plugin-commonjs": "^0.10.1",
-    "vue": "^3.2.47",
-    "vue-draggable-next": "^2.1.1",
-    "vue-router": "^4.1.6",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@microsoft/signalr": "^8.0.7",
+    "ali-oss": "^6.23.0",
+    "axios": "^1.10.0",
+    "core-js": "^3.44.0",
+    "echarts": "^5.6.0",
+    "element-plus": "^2.10.4",
+    "less": "^4.3.0",
+    "lodash-es": "^4.17.21",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.17",
+    "vue-draggable-next": "^2.2.1",
+    "vue-router": "^4.5.1",
     "vuex": "^4.1.0",
     "wangeditor": "^4.7.15"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.21.3",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.14.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.36.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "rimraf": "^4.1.2",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "stylus": "^0.59.0",
-    "typescript": "~4.8.4",
-    "vite": "^4.2.0",
+    "@babel/eslint-parser": "^7.28.0",
+    "@rushstack/eslint-patch": "^1.12.0",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.0.13",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
+    "@vitest/eslint-plugin": "^1.3.4",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-cypress": "^5.1.0",
+    "eslint-plugin-vue": "^10.3.0",
+    "jiti": "^2.4.2",
+    "jsdom": "^26.1.0",
+    "npm-run-all2": "^8.0.4",
+    "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "start-server-and-test": "^2.0.12",
+    "stylus": "^0.64.0",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.4",
     "vite-plugin-require-transform": "^1.0.21",
-    "vitest": "^0.29.1",
-    "vue-tsc": "^1.2.0"
+    "vite-plugin-vue-devtools": "^7.7.7",
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.0.1"
   }
 }
