build(Vol.Vue3.Vite): 重构 TypeScript 配置并添加 Vitest 支持
- 新增 tsconfig.app.json 和 tsconfig.vitest.json 文件
- 更新原有的 tsconfig.json 文件结构
- 修改 tsconfig.node.json 文件配置
- 移除 vite-plugin-commonjs 插件
- 添加 Vitest 配置文件

--- a/v3版本代码/Vol.Vue3.Vite/tsconfig.json
+++ b/v3版本代码/Vol.Vue3.Vite/tsconfig.json
@@ -1,17 +1,14 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "allowJs": true,//js文件忽略提示
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-
+  "files": [],
   "references": [
     {
       "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
     }
   ]
 }
