--- a/v3版本代码/Vol.Vue3.Vite/tsconfig.node.json
+++ b/v3版本代码/Vol.Vue3.Vite/tsconfig.node.json
@@ -1,8 +1,10 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.node.json",
-  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*"],
+  "extends": "@tsconfig/node22/tsconfig.json",
+  "include": ["vite.config.*", "vitest.config.*", "eslint.config.*"],
   "compilerOptions": {
-    "composite": true,
+    "noEmit": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "types": ["node"]
   }
 }
