--- a/vol.web/package.json
+++ b/vol.web/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vol",
-  "version": "3.5.0",
   "private": true,
+  "version": "3.5.0",
+  "type": "module",
   "scripts": {
     "serve": "vite --host",
     "dev": "vite --host",
@@ -15,48 +16,26 @@
     "clean": "rimraf node_modules"
   },
   "dependencies": {
-    "@amap/amap-jsapi-loader": "^1.0.1",
-    "@microsoft/signalr": "^7.0.3",
-    "ali-oss": "^6.17.1",
+    "@microsoft/signalr": "^8.0.7",
+    "ali-oss": "^6.23.0",
     "axios": "^1.3.4",
-    "core-js": "^3.29.0",
-    "echarts": "^5.4.1",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.4",
-    "less": "^4.1.3",
-    "pinia": "^2.0.32",
+   "sortablejs": "^1.15.3",
+    "less": "^4.4.0",
+    "pinia": "^3.0.3",
     "qrcode.vue": "^3.6.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "sortablejs": "^1.15.3",
-    "vite-plugin-commonjs": "^0.10.1",
-    "vue": "^3.4.0",
-    "vue-draggable-next": "^2.1.1",
-    "vue-router": "^4.1.6",
+    "vue": "^3.5.13",
+    "vue-draggable-next": "^2.2.1",
+    "vue-router": "^4.5.1",
     "vuex": "^4.1.0",
     "wangeditor": "^4.7.15"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.21.3",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.14.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.0",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "rimraf": "^4.1.2",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "stylus": "^0.59.0",
-    "typescript": "~5.7.3",
-    "vite": "^4.2.0",
-    "vite-plugin-require-transform": "^1.0.21",
-    "vitest": "^0.29.1",
-    "vue-tsc": "^1.2.0"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1",
+    "vue-tsc": "^2.1.10"
   }
 }
